--- a/.github/workflows/cpp_project.yml
+++ b/.github/workflows/cpp_project.yml
@@ -9,9 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: Update submodule
+      run: git submodule update --init --recursive
+    - name: Generate build files using cmake
+      run: cmake CMakeLists.txt
+    - name: Run make
+      run: make
+    - name: Run tests
+      run: ./runUnitTests
