--- a/.github/workflows/cpp_project.yml
+++ b/.github/workflows/cpp_project.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Update submodule
+      run: git submodule update --init --recursive
     - name: Generate build files using cmake
       run: cmake CMakeLists.txt
     - name: Run make
